--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@mui/material": "^5.16.7",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tensorflow/tfjs": "^4.20.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.105",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "aws-sdk": "^2.1676.0",
     "emailjs-com": "^3.2.0",
@@ -26,6 +27,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "typescript": "^4.9.5",
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-typescript": "^7.24.7",
     "@types/googlemaps": "^3.43.3",
     "@types/leaflet": "^1.9.12"
   }
